Fixed footer text alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-div.jumbotron h1,p{
+div.jumbotron h1, div.jumbotron p{
 	text-align: center;
 }
 .footer {
